# portreserve

./: Makefile  README.md  portreserve-allow-overlap.patch  portreserve-initscript-fixes.patch  portreserve-list-remove.patch  portreserve-memleak.patch  portreserve.spec
src/: ChangeLog  Makefile.am  Makefile.in  NEWS  config.h.in  configure  configure.in  portreserve.init  portreserve.spec  portreserve.spec.in
src/doc/: portreserve.xml
src/src/: portreserve.c
